--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "expo": "^38.0.0",
+    "expo-image-picker": "~8.3.0",
     "firebase": "^7.9.0",
     "lottie-react-native": "~2.6.1",
     "react": "16.11.0",
@@ -16,9 +17,11 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-google-books": "^1.0.4",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
+    "react-native-swipe-list-view": "^3.2.7",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.7",
     "react-navigation-drawer": "^2.4.11",
